# cerebrum

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish-cloud-push.yml  publish.yml  test-cloud-push.yml
examples/: feedthefamily.cerebrum.yaml
integrations/cerebrum-cloud/: LICENSE  README.md  pyproject.toml
integrations/cerebrum-cloud/src/cerebrum_cloud_push/: __init__.py  push.py
integrations/cerebrum-cloud/tests/: test_push.py
src/cerebrum/: __init__.py  cli.py
src/cerebrum/baseline/: __init__.py  coverage.py  models.py  runner.py
src/cerebrum/config/: __init__.py  loader.py  model.py
src/cerebrum/exec/: __init__.py  command.py  git.py
src/cerebrum/execute/: __init__.py  gate.py  lifecycle.py  models.py  pool.py  runner.py  select.py  store.py  targeting.py  worktree.py
src/cerebrum/generate/: __init__.py  llm.py  operator.py
src/cerebrum/report/: __init__.py  history.py  models.py  score.py  survivors.py  test_suggester.py
tests/: conftest.py  support.py  test_cli.py
tests/baseline/: test_cli.py  test_command.py  test_coverage.py  test_runner.py
tests/config/: test_cli.py  test_loader.py  test_model.py
tests/exec/: test_git.py
tests/execute/: test_gate.py  test_lifecycle.py  test_pool.py  test_report_cli.py  test_run_cli.py  test_runner.py  test_select.py  test_store.py  test_targeting.py  test_worktree.py
tests/generate/: test_llm.py
tests/report/: test_history.py  test_score.py  test_survivors.py  test_test_suggester.py
