[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebrum-cloud-push"
version = "0.1.0"
description = "Push Cerebrum mutation-testing run results to Cerebrum Cloud"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
cerebrum-cloud-push = "cerebrum_cloud_push.push:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cerebrum_cloud_push = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["cerebrum_cloud_push"]
